--- a/demo1.html
+++ b/demo1.html
@@ -244,9 +244,9 @@
         .header-login {
             margin-right: 20px;
         }
-        }.header-search-but button [
+        .header-search-but button {
             margin: 20PX;
-        ]
+        }
 
     </style>
 </head>
