--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
             background-color: #49c5b6;
         }
         .header-right {
-            display: flex;
+            dis·play: flex;
             align-items: center;
         }
         .header-login {
